# superboids

./: .gitignore  CMakeLists.txt  README.md  animation.cpp  animation.hpp  bird.cpp  bird.hpp  boid.cpp  boid.hpp  boid_tests.cpp  boids_tests.cpp  button.cpp  button.hpp  flock.cpp  flock.hpp  flock_tests.cpp  main.cpp  math.hpp  math_tests.cpp  multiflock.cpp  multiflock.hpp  obstacles.cpp  obstacles.hpp  obstacles_tests.cpp  predator.cpp  predator.hpp  predator_tests.cpp  test.md
graphics/: animation.cpp  animation.hpp  bird.cpp  bird.hpp
output/: Simulation_data.txt  boids.txt
simulation/: boid.cpp  flock.cpp  flock.hpp  math.hpp  obstacles.cpp  obstacles.hpp  predator.cpp  predator.hpp
tests/: boids_tests.cpp  flock_tests.cpp  math_tests.cpp  obstacles_tests.cpp  predator_tests.cpp
